Add api base url ('/api')
- Fix url forwarding for changed base url

--- a/config.js.sample
+++ b/config.js.sample
@@ -12,6 +12,7 @@ module.exports = {
         // }
     },
     appConf: {
+        API_BASE_URL: '/api',
         GITHUB_URL: 'https://api.github.com',
     },
 };
