Update config.js.sample with env variables

--- a/config.js.sample
+++ b/config.js.sample
@@ -2,7 +2,9 @@
 module.exports = {
     requestConf: {
         headers: {
-            'X-GitHub-Api-Version': '2022-11-28'
+            'X-GitHub-Api-Version': '2022-11-28',
+            // Change token or leave it commented
+            authorization: process.env.GITHUB_AUTHORIZATION
         },
         // request: {
         //     fetch: async function() {
@@ -12,7 +14,7 @@ module.exports = {
         // }
     },
     appConf: {
-        API_BASE_URL: '/api',
-        GITHUB_URL: 'https://api.github.com',
+        API_BASE_PATH: process.env.API_BASE_PATH || '/api',
+        GITHUB_URL: process.env.GITHUB_URL || 'https://api.github.com',
     },
 };
