Add simplified Swagger specification

--- a/package.json
+++ b/package.json
@@ -3,21 +3,23 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "build": "node build.js",
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "test": "jest index.js"
+    "test": "jest index.js",
+    "gen-swagger": "node gen-swagger.js"
   },
   "dependencies": {
     "@octokit/request": "^6.2.3",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "express": "~4.16.1",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "swagger-ui-express": "^4.6.2"
   },
   "devDependencies": {
     "jest": "^29.5.0",
     "nodemon": "^2.0.22",
-    "supertest": "^6.3.3"
+    "supertest": "^6.3.3",
+    "swagger-autogen": "^2.23.1"
   }
 }
